完成响应的新增

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
+encoding//kdCarCheckDevSimulator/cmd_ui.py=utf-8
 encoding//kdCarCheckDevSimulator/kdCarCheckDevSimulator_ui.py=utf-8
 encoding/main.py=utf-8
 encoding/setup.py=utf-8
